xong trang pricing

--- a/html/pricing.html
+++ b/html/pricing.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../assets/css/style_pricing.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
     <title>Featured Music | Epidemic Sound</title>
-    
+
 </head>
 
 <body>
@@ -34,8 +34,151 @@
             </div>
         </div>
     </div>
+
+    <!-- Our subscriptions-->
+    <div class="pricing">
+        <div class="display">
+            <div class="display1">
+                <p>Our subscriptions</p>
+            </div>
+            <div class="display2">
+                <p> Display prices</p>
+                <div class="display3">
+                    <p>
+                    <p class="small">Yearly</p>
+
+                    Monthly
+                    </p>
+                </div>
+            </div>
+
+        </div>
+        <div class="grid_price">
+            <div class="grid_items_pricing">
+                <p class="pricing--p">Personal</p>
+                <div class="pricing_title">
+                    <span class="title_money">$12</span>
+                    <div class="title_month">/month*</div>
+                </div>
+                <div class="pricing_benefit">
+                    <div>
+                        <span><i class="fa-solid fa-check fa-lg"></i></span><span class="benefit_items">Unlimited
+                            downloads</span>
+                    </div>
+                    <div>
+                        <span><i class="fa-solid fa-check fa-lg"></i></span>
+                        <div class="benefit_items">YouTube, Facebook, TikTok, Instagram, Twitch, podcasts</div>
+                    </div>
+                    <div>
+                        <span><i class="fa-solid fa-check fa-lg"></i></span>
+                        <div class="benefit_items">Monetize on one channel per platform</div>
+                    </div>
+                </div>
+                <div class="pricing_note">
+                    <p>*When you pay $144/year upfront for one year. Otherwise $15 monthly.</p>
+                </div>
+                <div class="pricing_note2">
+                    <div class="btnPremiere" style="margin-top: 15px;">
+                        <p class="txt_premiere">Start free trial</p>
+                    </div>
+                    <div class="btn_learnMore">
+                        <div class="style_btn">
+                            <p>Learn more</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="grid_items_pricing">
+                <p class="pricing--p">Commercial</p>
+                <div class="pricing_title">
+                    <span class="title_money">$25</span>
+                    <div class="title_month">/month*</div>
+                </div>
+                <div class="pricing_benefit">
+                    <p>Everything in Personal, plus:</p>
+                    <div>
+                        <span><i class="fa-solid fa-check fa-lg"></i></span><span class="benefit_items">Covered for
+                            social media, online platforms and websites</span>
+                    </div>
+                    <div>
+                        <span><i class="fa-solid fa-check fa-lg"></i></span>
+                        <div class="benefit_items">Publish content for your clients and business</div>
+                    </div>
+                    <div>
+                        <span><i class="fa-solid fa-check fa-lg"></i></span>
+                        <div class="benefit_items">Unlimited use in digital ads</div>
+                    </div>
+                </div>
+                <div class="pricing_note">
+                    <p>*When you pay $299/year upfront for one year. Otherwise $49 monthly.</p>
+                </div>
+                <div class="pricing_note2">
+                    <div class="btnPremiere" style="margin-top: 15px;">
+                        <p class="txt_premiere">Start free trial</p>
+                    </div>
+                    <div class="btn_learnMore">
+                        <div class="style_btn">
+                            <p>Learn more</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="grid_items_pricing">
+                <p class="pricing--p">Enterprise</p>
+                <div class="pricing_title">
+                    <span class="title_money" style="font-size: 40px;">Request a quote</span>
+                    <div class="title_month"></div>
+                </div>
+                <div class="pricing_benefit">
+                    <p>Everything in Commercial, plus:</p>
+                    <div>
+                        <span><i class="fa-solid fa-check fa-lg"></i></span><span class="benefit_items">Multiple user
+                            accounts</span>
+                    </div>
+                    <div>
+                        <span><i class="fa-solid fa-check fa-lg"></i></span>
+                        <div class="benefit_items">All rights covered for TV shows and ads</div>
+                    </div>
+                    <div>
+                        <span><i class="fa-solid fa-check fa-lg"></i></span>
+                        <div class="benefit_items">Customer Success manager and music curation</div>
+                    </div>
+                    <div>
+                        <span><i class="fa-solid fa-check fa-lg"></i></span>
+                        <div class="benefit_items">Customized deal terms</div>
+                    </div>
+                </div>
+                <div class="pricing_note">
+
+                </div>
+                <div class="pricing_note2" style="margin-top: 10px;">
+                    <div class="btnPremiere" style="margin-top: 15px;">
+                        <p class="txt_premiere">Start free trial</p>
+                    </div>
+                    <div class="btn_learnMore">
+                        <div class="style_btn">
+                            <p>Learn more</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="img1">
+        <div class="img_text">
+            <h3>Not sure which one to pick?</h3>
+            <div class="boxp">
+                <p>Take our quiz</p>
+            </div>
+        </div>
+
+    </div>
+
+
     <!-- Layout for box1 -->
-    <div class="container">
+    <div class="container" style="padding-top: 70px;">
         <div class="text">
             <h2>Plan comparison</h2>
         </div>
@@ -400,60 +543,62 @@
         <div class="box">
             <div>
                 <a class="ask">
-                    <span>Want to buy a single track? <i class="fa-solid fa-arrow-right" style="color: rgb(0, 157, 224);"></i>
+                    <span>Want to buy a single track? <i class="fa-solid fa-arrow-right"
+                            style="color: rgb(0, 157, 224);"></i>
                     </span>
                 </a>
             </div>
         </div>
         <div class="cover">
-            <img src="/BaiTapLon_nhom11/assets/images/images_pricing/cover.jpg" alt="album cover" width="712" height="203">
+            <img src="/BaiTapLon_nhom11/assets/images/images_pricing/cover.jpg" alt="album cover" width="712"
+                height="203">
         </div>
     </div>
     <!-- layout for end web -->
     <div class="web_end">
         <div class="layout1">
-          <div class="social_network">
-            <div class="social_network1">
-              <li>Music</li>
-              <li>Sound Effects</li>
-              <li>For Artists</li>
-              <li>In-Store Music</li>
-              <li>Blog</li>
-              <li>Help</li>
+            <div class="social_network">
+                <div class="social_network1">
+                    <li>Music</li>
+                    <li>Sound Effects</li>
+                    <li>For Artists</li>
+                    <li>In-Store Music</li>
+                    <li>Blog</li>
+                    <li>Help</li>
+                </div>
+                <div class="social_network1">
+                    <li>Pricing</li>
+                    <li>Enterprise</li>
+                    <li>Press</li>
+                    <li>Careers</li>
+                    <li>Community</li>
+                </div>
+                <div class="social_network1">
+                    <li>Spotify</li>
+                    <li>Youtube</li>
+                    <li>Instagram</li>
+                    <li>Facebook</li>
+                    <li>Twitter</li>
+                </div>
             </div>
-            <div class="social_network1">
-              <li>Pricing</li>
-              <li>Enterprise</li>
-              <li>Press</li>
-              <li>Careers</li>
-              <li>Community</li>
+            <div class="credit">
+                <div class="credit1">
+                    <p>Copyright © Epidemic Sound</p>
+                </div>
+                <div class="credit2">
+                    <li>Privacy</li>
+                    <li>Genaral</li>
+                    <li>Cookie</li>
+                </div>
             </div>
-            <div class="social_network1">
-              <li>Spotify</li>
-              <li>Youtube</li>
-              <li>Instagram</li>
-              <li>Facebook</li>
-              <li>Twitter</li>
-            </div>
-          </div>
-          <div class="credit">
-            <div class="credit1">
-              <p>Copyright © Epidemic Sound</p>
-            </div>
-            <div class="credit2">
-              <li>Privacy</li>
-              <li>Genaral</li>
-              <li>Cookie</li>
-            </div>
-          </div>
         </div>
         <div class="layout2">
-  
+
         </div>
-      </div>
-  
-  
-      <!-- script for all -->
-  </body>
-  </html>
-    
+    </div>
+
+
+    <!-- script for all -->
+</body>
+
+</html>
