sua lai mot so cho, xu ly xong phan js quan ly nguoi dung

--- a/html/license_model.html
+++ b/html/license_model.html
@@ -25,11 +25,11 @@
     </div>
     <div class="header--menu">
       <ul class="nav_menu">
-        <li class="menu_items"><a class="active" href="index.html">Music</a></li>
-        <li class="menu_items"><a href="sound_effect.html">Sound Effects</a></li>
-        <li class="menu_items"><a href="license_model.html">License Model</a></li>
-        <li class="menu_items"><a href="pricing.html">Pricing</a></li>
-        <li class="menu_items"><a href="login.html">Log in</a></li>
+        <li class="menu_items"><a class="menu_items_color" href="index.html">Music</a></li>
+        <li class="menu_items"><a class="menu_items_color" href="sound_effect.html">Sound Effects</a></li>
+        <li class="menu_items"><a class="active" href="license_model.html">License Model</a></li>
+        <li class="menu_items"><a class="menu_items_color" href="pricing.html">Pricing</a></li>
+        <li class="menu_items"><a class="menu_items_color" href="login.html">Log in</a></li>
         <li class="menu_items-icon"><i class="fa-solid fa-magnifying-glass fa-lg"></i></li>
       </ul>
     </div>
@@ -53,7 +53,7 @@
               Start free trial
             </span>
           </a>
-          <a href="https://www.epidemicsound.com/pricing/" class="bot_item2">
+          <a href="pricing.html" class="bot_item2">
             <span class="item2">
               Our subscriptions
             </span>
