--- a/html/pricing.html
+++ b/html/pricing.html
@@ -20,10 +20,10 @@
         </div>
         <div class="header--menu">
             <ul class="nav_menu">
-                <li class="menu_items"><a class="active" href="index.html">Music</a></li>
+                <li class="menu_items"><a class="menu_items_color" href="index.html">Music</a></li>
                 <li class="menu_items"><a class="menu_items_color" href="sound_effect.html">Sound Effects</a></li>
                 <li class="menu_items"><a class="menu_items_color" href="license_model.html">License Model</a></li>
-                <li class="menu_items"><a class="menu_items_color" href="pricing.html">Pricing</a></li>
+                <li class="menu_items"><a class="active" class="menu_items_color" href="pricing.html">Pricing</a></li>
                 <li class="menu_items"><a class="menu_items_color" href="login.html">Log in</a></li>
                 <li class="menu_items-icon"><i class="fa-solid fa-magnifying-glass fa-lg"></i></li>
             </ul>
@@ -550,7 +550,7 @@
             </div>
         </div>
         <div class="cover">
-            <img src="/BaiTapLon_nhom11/assets/images/images_pricing/cover.jpg" alt="album cover" width="712"
+            <img src="/assets/images/images_pricing/cover1.jpg" alt="album cover" width="712"
                 height="203">
         </div>
     </div>
