--- a/html/sound_effect.html
+++ b/html/sound_effect.html
@@ -42,8 +42,8 @@
     </div>
     <div class="header--menu">
       <ul class="nav_menu">
-        <li class="menu_items"><a class="active" href="index.html">Music</a></li>
-        <li class="menu_items"><a href="sound_effect.html">Sound Effects</a></li>
+        <li class="menu_items"><a href="index.html">Music</a></li>
+        <li class="menu_items"><a class="active" href="sound_effect.html">Sound Effects</a></li>
         <li class="menu_items"><a href="license_model.html">License Model</a></li>
         <li class="menu_items"><a href="pricing.html">Pricing</a></li>
         <li class="menu_items"><a href="login.html">Log in</a></li>
