--- a/admin/admin.html
+++ b/admin/admin.html
@@ -4,9 +4,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/admin/css/style_admin.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Admin</title>
 </head>
 <body>
-    
+    <header>
+        <div class="header">
+            <div class="header_items_left">
+                <h1>Admin</h1>
+                <p>Manage User</p>
+            </div>
+            <div class="header_items_right">
+                <a href="../html/index.html">Home</a>
+            </div>
+        </div>
+    </header>
+    <form onsubmit="create_user()" action="" name="form_manage_user">
+        <div class="form_input">
+            <input class="form_input_items" type="text" name="username" id="username" placeholder="username"><span id="txtNotificationUsername"></span>
+            <input class="form_input_items" type="text" name="email" id="email" placeholder="email"><span id="txtNotificationEmail"></span>
+            <input class="form_input_items" type="text" name="password" id="password" placeholder="password"><span id="txtNotificationPW"></span>
+            <div class="btn_manage">
+                <button class="btns btn_add" id="add" type="button" onclick="adds()">Add</button>
+                <button class="btns btn_del" id="del" type="button" onclick="refresh()">Delete</button>
+            </div>
+        </div>
+    </form>
+    <div class="parent">
+        <div class="table_items">Username</div>
+        <div class="table_items table_items_border">Email</div>
+        <div class="table_items table_items_border">Password</div>
+    </div>
+    <div class="parent" id="data_user">
+        
+    </div>
+
+      <script src="/admin/js/admin.js"></script>
 </body>
 </html>
