--- a/html/login.html
+++ b/html/login.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/assets/css/style_login.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
     <title>Login</title>
+    <link rel="stylesheet" href="../assets/css/style_login.css">
 </head>
 <body>
     <div class="d-body">
@@ -57,10 +58,10 @@
             </div>
         </div>
         <div class="logo">
-            <img src="/assets/images/images_login/img.jpg" alt="">
+            <img src="../assets/images/images_login/img.jpg" alt="">
         </div>
     </div>
 
-    <script src="/assets/js/login.js"></script>
+    <script src="../assets/js/login.js"></script>
 </body>
 </html>
